git notes (added how to manage remote name change)

--- a/6-Git.ipynb
+++ b/6-Git.ipynb
@@ -49,7 +49,8 @@
     "- [youtube full git tutorial](https://www.youtube.com/watch?v=fQLK8Ib_SKk&list=RDCMUCW5YeuERMmlnqo4oq8vwUpg&start_radio=1)\n",
     "- [gitignore video](https://www.youtube.com/watch?v=L8l89nUFggU)\n",
     "- [git reset article](https://devconnected.com/how-to-unstage-files-on-git/)\n",
-    "- [git commit and push timestamp](https://youtu.be/fQLK8Ib_SKk?t=503)"
+    "- [git commit and push timestamp](https://youtu.be/fQLK8Ib_SKk?t=503)\n",
+    "- [git change remote name](https://docs.github.com/en/get-started/getting-started-with-git/managing-remote-repositories) - [delete or rename remote](https://docs.github.com/en/get-started/getting-started-with-git/managing-remote-repositories#removing-a-remote-repository)"
    ]
   },
   {
@@ -115,7 +116,17 @@
     "```bash\n",
     "git remote add origin repo_url\n",
     "```\n",
-    "11. push to remote repo\n",
+    "11. show remote url\n",
+    "```bash\n",
+    "git remote -v\n",
+    "```\n",
+    "12. changing remote url\n",
+    "```bash \n",
+    "git rm origin\n",
+    "git remote -v\n",
+    "git remote add origin new_repo_url\n",
+    "```\n",
+    "13. push to remote repo\n",
     "```bash\n",
     "git push origin master\n",
     "``` "
