fixed some spelling errors

--- a/2-Data_Warehouse.ipynb
+++ b/2-Data_Warehouse.ipynb
@@ -29,14 +29,15 @@
    "id": "01f20713-faf5-4745-bf6a-fedab0d43959",
    "metadata": {},
    "source": [
-    "## Data Warehouse Archetictures\n",
-    "- __centerlized data warehouse:__ \n",
+    "## Data Warehouse Architectures\n",
+    "\n",
+    "- __centralized data warehouse:__ \n",
     "    - centralized data warehouse is a large storage that contains multiple databases, each of which corresponds to a specific subject area or a department of an organization. Each database contains strictly defined tables and columns that hold all the historical data needed for analysis.\n",
     "    - users pull data directly from the warehouse for analysis\n",
     "- __hub-and-spoke:__\n",
     "   - is a centralized data warehouse complimented by data marts\n",
     "   - users pull data from their respective data mart at much higher speed\n",
-    "    - __datamart:__\n",
+    "    - __data mart:__\n",
     "       - The process of creating a data mart involves selecting and summarizing the data from the larger data warehouse in a way that is relevant and useful to a specific business unit or department. The data is then transformed into a format that is optimized for fast querying and analysis, and loaded into a separate physical storage.\n",
     "       - provide faster query time (less computation expences) but duplicates the data so requires additional space (more storage expenses)"
    ]
@@ -46,8 +47,8 @@
    "id": "a73e5a96-3ae8-45b8-bb68-e70a0461454e",
    "metadata": {},
    "source": [
-    "## Components Of A Data Warhouseing Solution\n",
-    "- data sources > staging etl > staging database > etl > data warhouse"
+    "## Components Of A Data Warehousing Solution\n",
+    "- data sources > staging etl > staging database > etl > data warehouse"
    ]
   },
   {
@@ -56,7 +57,7 @@
    "metadata": {},
    "source": [
     "## Normalization\n",
-    "- Denormalizing data \n",
+    "- De-normalizing data \n",
     "    - improve data read and write performance by reducing the need for complex joins across multiple tables. \n",
     "    - requires duplicating data, which can increase storage requirements and potentially lead to data consistency issues.\n",
     "    - commonly used for transactional systems, where query performance is critical and data consistency can be maintained through other means, such as transactional control mechanisms\n",
@@ -81,16 +82,16 @@
     "\n",
     "\n",
     "- For example, in the a retail store where there are an order and product tables (for simplicity each order have one product only):\n",
-    "    1. the fact table can be interprted as a join between the order and product tables\n",
-    "    2. the columns selected include forign key from the oreder and product table (dimension tables primary keys)\n",
+    "    1. the fact table can be interpreted as a join between the order and product tables\n",
+    "    2. the columns selected include foreign key from the order and product table (dimension tables primary keys)\n",
     "    3. the columns selected also include key numeric metrics like quantity and price\n",
-    "    4. the fact table can provide complex anlaysis by aggrigating the numeric columns without multiple complex joins\n",
+    "    4. the fact table can provide complex analysis by aggregating the numeric columns without multiple complex joins\n",
     "        - ex: calculating the total revenue for a specific product category\n",
     "\n",
     "            ```sql\n",
     "            SELECT SUM(sales) \n",
     "            FROM  fact_table\n",
-    "            WHERE product_catigory = 'product' \n",
+    "            WHERE product_category = 'product' \n",
     "            -- a join with the product table was avoided thus a faster query\n",
     "            ----------------------------------------------------------------\n",
     "            ```\n",
@@ -109,7 +110,7 @@
     "            ------------------------------------------------------------------------\n",
     "            ```\n",
     "\n",
-    "- Usally its computaionally expensive to query the fact table like results through joins, so a fact table is defined in the warehouse schema taking more storage space but saving computaional resources as a form of denormalization.\n",
+    "- Usually its computationally expensive to query the fact table like results through joins, so a fact table is defined in the warehouse schema taking more storage space but saving computational resources as a form of de-normalization.\n",
     "\n",
     "- a data warehouse should have one truth table for every process:\n",
     "    - if two databases are related to the same process the truth table should be a join between the dimension tables of the two databases"
@@ -125,10 +126,10 @@
     "### Star Schema\n",
     "\n",
     "- The star schema is designed to optimize query performance and provide simplicity.\n",
-    "    - it results in larger disk space, however, quries faster and less complex.\n",
-    "- the dimension tables are not normlized.\n",
+    "    - it results in larger disk space, however, quires faster and less complex.\n",
+    "- the dimension tables are not normalized.\n",
     "- __ALL__ dimension tables are connected to the fact tables \n",
-    "    - no-subtables only one join needed to connect to another table \n",
+    "    - no-suitable only one join needed to connect to another table \n",
     "- __example:__ the fact table is \"Sales\" and contains the quantitative data related to each sale, such as the date, product ID, and sales amount. The dimension tables are \"Products\", \"Customers\", and \"Time\", and each contains descriptive information about the sale, such as the product name, customer name, and sale date.\n",
     "```sql\n",
     "SELECT p.category, SUM(s.sales_amount) as total_sales\n",
@@ -144,8 +145,8 @@
     "- The snowflake schema is designed to reduce data redundancy and improve data integrity\n",
     "    - it can result in slower query performance due to the increased number of joins required.\n",
     "- the dimension tables are normalized into multiple related tables.\n",
-    "- the truth table is connected to __SOME__ but not all of the normlized dimension tables.\n",
-    "    - sub tables are present and some tables reuquire multiple joins to connect to a normalized table\n",
+    "- the truth table is connected to __SOME__ but not all of the normalized dimension tables.\n",
+    "    - sub tables are present and some tables require multiple joins to connect to a normalized table\n",
     "- __Example__: the fact table is \"Sales\" and contains the quantitative data related to each sale, such as the date, product ID, and sales amount. The \"Products\" dimension table is normalized into multiple related tables, including \"Product\", \"Product Category\", and \"Manufacturer\". The \"Customers\" and \"Time\" dimension tables are the same as in the star schema example.\n",
     "```sql\n",
     "SELECT pc.category, SUM(s.sales_amount) as total_sales\n",
@@ -163,7 +164,7 @@
    "id": "02223ab4-e4af-4051-9bb6-4d5b4923daaa",
    "metadata": {},
    "source": [
-    "## Distrbuted Vs Non-Distrbuted\n",
+    "## Distributed Vs Non-Distributed\n",
     "\n",
     "- Non-distributed Data Warehouse Solutions:\n",
     "    - Run on a single server or small cluster\n",
