--- a/2-Database_modelling/Database_Conceptual_Design.ipynb
+++ b/2-Database_modelling/Database_Conceptual_Design.ipynb
@@ -17,11 +17,11 @@
     "\n",
     "__External:__ \n",
     "- An external schema is the view of the database from the perspective of a particular user or application. It defines how the data is presented to the user and what data is visible to them. External schemas allow users to access and manipulate data without having to be concerned with how the data is stored or organized internally.\n",
-    "- Example: a data mart is a type of external schema were a specific data (ex: HR) is extracted form the main warhouse and summerized for a specific user to access\n",
+    "- Example: a data mart is a type of external schema were a specific data (ex: HR) is extracted form the main warehouse and summarized for a specific user to access\n",
     "\n",
     "__Conceptual:__ \n",
     "- A conceptual schema is a high-level description of the entire database. It defines the overall structure of the database, including the relationships between different data elements. The conceptual schema is designed to be independent of any specific database management system and is often represented using an entity-relationship (ER) diagram.\n",
-    "- Example: a data warehouse is a type of conceptual schema where all data is centrelized in one source logically orgnized according to ER\n",
+    "- Example: a data warehouse is a type of conceptual schema where all data is centralized in one source logically organized according to ER\n",
     "\n",
     "__Physical:__ \n",
     "- A physical schema describes how the data is physically stored in the database. It includes details such as the data storage format, the indexing strategy, and the physical location of the data on the storage device. The physical schema is closely tied to the specific database management system being used.\n",
@@ -93,12 +93,24 @@
     "for each table check the attributes of each column\n",
     "- __unique attributes:__ set as primary keys.\n",
     "    - ex: set employee_id as the primary key\n",
-    "- __Multi-value attributes:__ create a new table use the main table primarykey as foreign key and the attribute as the primary key.\n",
-    "    - ex: multiple phone numbers, create a new table where emplyee phone number and employee id are the primary key and emplyee_id connects to the main table as a forign key\n",
+    "    \n",
+    "</b>\n",
+    "\n",
+    "- __Multi-value attributes:__ create a new table use the main table primary key as foreign key and the attribute as the primary key.\n",
+    "    - ex: multiple phone numbers, create a new table where employee phone number and employee id are the primary key and employee_id connects to the main table as a foreign key.\n",
+    "\n",
+    "</b>\n",
+    "\n",
     "- __Composite attributes:__ split sub attributes (use each sub attribute as an attribute.)\n",
     "    - ex: address where it contains country, city, street, apartment.\n",
+    "\n",
+    "</b>\n",
+    "\n",
     "- __Derived attributes:__ don’t add the derived attributes.\n",
     "    - ex: the sum of two column is considered dervied and shouldnt be included it can be calcualted when needed\n",
+    "\n",
+    "</b>\n",
+    "\n",
     "- __Weak entitles:__ add a foreign key to entity.\n",
     "    - a weak entity might be an order entity in an e-commerce database. An order might be identified by a combination of its order number and the customer who placed the order. In this case, the order entity depends on the customer entity to provide a unique identifier."
    ]
@@ -115,11 +127,13 @@
     "    - ex: a customer can place multiple orders but orders are made by only one customer (one (customer table) to many (orders table))\n",
     "    - to know which customer placed a aceartin order the order table has a forign key from the customer table\n",
     "\n",
+    "</b>\n",
     "\n",
     "- __Many to many:__ add both foreign key into a new table.\n",
     "    - example: a student can enroll in many courses, and a course can have many students enrolled in it.\n",
     "    - creating a table with every student course pair (student_id, course_id) can help identify all students enrolled in a certain course and all courses a student is enrolled in\n",
     "\n",
+    "</b>\n",
     "\n",
     "- __One to one:__\n",
     "    - the forign key can be put in either side without any problems but its generally prefered to put the foreign key in a less accessed table since an extra column reduces query speed. here are some general rules to apply when mappinga  one to one relationship:\n",
@@ -128,6 +142,8 @@
     "        - Must/Must: merge the two tables.\n",
     "    - ex: a person may have only one passport, and a passport can be issued to only one person.\n",
     "    - in context of an airport database the person_id is a must have and the passport_id is a must have too so the two tables should be merged\n",
+    "\n",
+    "</b>\n",
     "\n",
     "- __Ternary relationship:__ create a new table with all 3 primary keys as foreign keys. (comparable to a fact table in a warehouse)"
    ]
@@ -139,43 +155,47 @@
    "source": [
     "### Normalization\n",
     "\n",
-    "#### Zero normal form\n",
+    "#### Zero Normal form\n",
     "- pick a primary key for the table(s)\n",
     "\n",
-    "#### First normal form\n",
+    "#### First Normal form\n",
     "\n",
     "1. split composite attribute\n",
-    "    - ex split adress column(composite) to country city street columns\n",
+    "    - ex split address column(composite) to country city street columns\n",
     "\n",
-    "1. remove multi-value attributes and repeating groups\n",
-    "    - multi-value attributes example: employee with multiple phone numbers comma separted in the phone column.\n",
-    "        |employee_id| phone number|\n",
-    "        |----------|---------------|\n",
-    "        |1|0101115422,0101111245|\n",
-    "        |2|0101111245,0103333313|\n",
+    "</b>\n",
     "\n",
-    "    - repeating groups example: employee with multiple phone numbers comma separted in the phone column.\n",
+    "2. remove multi-value attributes and repeating groups\n",
+    "    1. multi-value attributes example: employee with multiple phone numbers comma separated in the phone column.\n",
+    "    2. repeating groups example: employee with multiple phone numbers where each phone number is in a column.\n",
+    "    - solution: create an new table phone numbers where: employee_id (foreign) and phone number are the primary key\n",
+    "    \n",
+    "    multi-value attribute example\n",
+    "    |employee_id| phone number|\n",
+    "    |----------|---------------|\n",
+    "    |1|0101115422,0101111245|\n",
+    "    |2|0101111245,0103333313|\n",
+    "\n",
+    "    repeating groups example\n",
     "    |employee_id|phone number1|phone number2|\n",
     "    |-----------|-------------|------------|\n",
     "    |1|0101115422|0101111245|\n",
     "    |2|0101111245|0103333313|\n",
-    "   \n",
-    "   \n",
-    "   - solution: create an new table phone numbers where: employee_id (forign) and phone number are the primary key\n",
-    "    - result:\n",
-    "        |employee_id| phone number|\n",
-    "        |----------|---------------|\n",
-    "        |1|0101115422|\n",
-    "        |1|0101111245|\n",
-    "        |2|0101111245|\n",
-    "        |2|0103333313|\n",
+    "    \n",
+    "    solution example \n",
+    "    |employee_id| phone number|\n",
+    "    |----------|---------------|\n",
+    "    |1|0101115422|\n",
+    "    |1|0101111245|\n",
+    "    |2|0101111245|\n",
+    "    |2|0103333313|\n",
     "\n",
-    "#### Second normal form\n",
+    "#### Second Normal form\n",
     "- identify any partial dependencies in the table and separate them into their own tables. A partial dependency occurs when a non-key attribute is dependent on only part of the primary key. (remove partial dependencies from composite keys)\n",
     "\n",
-    "    - examp;e: for a table that has a book_id, book_name, authour_name, author adress. the authour name /author adress is not dierectly dependant on the book id so it should be moved to a new table (authour table)\n",
+    "    - example: for a table that has a book_id, book_name, author_name, author address. the author name /author address is not directly dependant on the book id so it should be moved to a new table (author table)\n",
     "\n",
-    "#### Third normal form\n",
+    "#### Third Normal form\n",
     "\n",
     "- identify any transitive dependencies in the table and separate them into their own tables. A transitive dependency occurs when a non-key attribute is dependent on another non-key attribute, rather than on the primary key.\n",
     "\n",
@@ -186,23 +206,30 @@
     "    |2|1003|Widget C|20.00|1|\n",
     "    |2|1004|Widget D|25.00|4|\n",
     "\n",
-    "    - In this table, the primary key is a composite key made up of \"Order ID\" and \"Item Name\". The \"Supplier Name\", \"Supplier Address\", and \"Supplier Phone\" attributes are dependent on the \"Item Name\" component of the composite key, not on the entire primary key.\n",
+    "    In this table, the primary key is a composite key made up of \"Order ID\" and \"Item Name\". The \"Supplier Name\", \"Supplier Address\", and \"Supplier Phone\" attributes are dependent on the \"Item Name\" component of the composite key, not on the entire primary key.\n",
     "    \n",
-    "    - solution: separate to the following tables\n",
-    "        - Items Table:\n",
+    "- solution: separate to the following tables\n",
+    "        \n",
+    "    - Items Table:\n",
     "        |Item Name|Item Price|\n",
     "        |-|-|\n",
     "        |Widget A|10.00|\n",
     "        |Widget B|15.00|\n",
     "        |Widget C|20.00|\n",
     "        |Widget D|25.00|\n",
-    "        - Suppliers Table:\n",
+    "    \n",
+    "    </b>\n",
+    "\n",
+    "    - Suppliers Table:\n",
     "        |Supplier Name|Supplier Address|Supplier Phone|\n",
     "        |-|-|-|\n",
     "        |Supplier X|123 Main St|555-1234|\n",
     "        |Supplier Y|456 Elm St|555-5678|\n",
     "        |Supplier Z|789 Oak St|555-9012|\n",
-    "        - Order Items Table:\n",
+    "    \n",
+    "    </b>\n",
+    "\n",
+    "    - Order Items Table:\n",
     "        |Order ID|Item Name|Quantity|\n",
     "        |-|-|-|\n",
     "        |1|Widget A|3|\n",
@@ -211,6 +238,12 @@
     "        |2|Widget D|4|\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d633ca4e",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
